<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_text"
        android:paddingTop="24dp"
        android:textSize="24sp"
        android:textAllCaps="false"
        android:textStyle="normal|bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username_text_edit"
        android:hint="@string/username_hint"
        android:paddingTop="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_text"
        android:paddingTop="24dp"
        android:textSize="24sp"
        android:textStyle="normal|bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_text_edit"
        android:hint="@string/password_hint"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:inputType="textPassword"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:text="@string/login_button"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_account_button"
        android:text="@string/new_account_button"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <!-- conditionally visible button for user already logged in with Facebook -->
    <Button
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_menu_button"
        android:text="@string/main_menu_button"/>

</LinearLayout>