<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="6dp"
        android:paddingBottom="15dp"
        android:textSize="36sp"
        android:text="@string/settings_title"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty_setting"
            android:layout_weight="1"
            android:textSize="20sp"
            android:paddingLeft="5dp"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/difficulty_spinner"
            android:layout_weight="1"
            android:paddingRight="5dp"/>
    </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:paddingBottom="10dp">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/game_music_setting"
           android:layout_weight="1"
           android:textSize="20sp"
           android:paddingLeft="5dp"/>

       <Switch
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/game_music_switch"
           android:layout_weight="1"
           android:paddingRight="5dp"/>
   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip_dialog_setting"
            android:layout_weight="1"
            android:textSize="20sp"
            android:paddingLeft="5dp"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/skip_dialog_switch"
            android:layout_weight="1"
            android:paddingRight="5dp"/>
    </LinearLayout>


</LinearLayout>